<?xml version="1.0"?>
<package format="2">
  <name>NewDetectionMessage</name>
  <version>0.0.0</version>
  <description>The NewDetectionMessage package</description>

  <maintainer email="serl@todo.todo">serl</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
 <!--  <run_depend>message_runtime</run_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
